fix flip clock layout bug

--- a/source/stylesheets/flipclock.css
+++ b/source/stylesheets/flipclock.css
@@ -68,6 +68,7 @@
   position: relative;
   float: left;
   margin: 5px;
+  margin-top: 0em;
   width: 60px;
   height: 90px;
   font-size: 80px;
@@ -108,7 +109,7 @@
   width: 100%;
   height: 50%;
   font-size: 80px;
-  overflow: hidden; 
+  overflow: hidden;
   outline: 1px solid transparent; }
 
 .flip-clock-wrapper ul li a div .shadow {
